services.yaml
apiVersion: v1
kind: Service

metadata:
  name: jenkins
  namespace: jenkins

spec:
  ports:
    - name: websecure
      port: 8080
      targetPort: websecure

  selector:
    app: jenkins
