ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: jenkins
  namespace: jenkins

spec:
  entryPoints:
    - websecure

  routes:
    - match: Host(`jenkins-k8s.campogrande.ms.gov.br`)
      kind: Rule

      middlewares:
        - name: redirectscheme

      services:
        - name: jenkins
          port: 8080

  tls: {}
